Add postgres deps to eb pre-deps config

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ local_settings.py
 
 # Media files
 runblueprint/media/
+
+# Elastic Beanstalk Files
+runblueprint/.elasticbeanstalk/*
+!runblueprint/.elasticbeanstalk/*.cfg.yml
+!runblueprint/.elasticbeanstalk/*.global.yml
