--- a/runblueprint/.ebextensions/django.config
+++ b/runblueprint/.ebextensions/django.config
@@ -1,3 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: runblueprint/wsgi.py
+  - namespace: aws:elasticbeanstalk:container:python:staticfiles
+    option_name: /static/
+    value: static/
