Fix bad config yaml

--- a/runblueprint/.ebextensions/02_python.config
+++ b/runblueprint/.ebextensions/02_python.config
@@ -6,12 +6,12 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python runblueprint/manage.py collectstatic --noinput"
 
 option_settings:
-  - namespace: aws:elasticbeanstalk:application:environment:
+  - namespace: "aws:elasticbeanstalk:application:environment:"
     option_name: DJANGO_SETTINGS_MODULE
     value: runblueprint.settings
-  - namespace: aws:elasticbeanstalk:container:python:
+  - namespace: "aws:elasticbeanstalk:container:python:"
     option_name: WSGIPath
     value: runblueprint/wsgi.py
-  - namespace: aws:elasticbeanstalk:container:python:staticfiles
+  - namespace: "aws:elasticbeanstalk:container:python:staticfiles:"
     option_name: /static/
     value: static/
