--- a/runblueprint/.ebextensions/02_python.config
+++ b/runblueprint/.ebextensions/02_python.config
@@ -3,15 +3,18 @@ container_commands:
     command: "django-admin.py migrate"
     leader_only: true
   02_collectstatic:
-    command: "source /opt/python/run/venv/bin/activate && python runblueprint/manage.py collectstatic --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
 
 option_settings:
-  - namespace: "aws:elasticbeanstalk:application:environment:"
+  - namespace: "aws:elasticbeanstalk:application:environment"
     option_name: DJANGO_SETTINGS_MODULE
     value: runblueprint.settings
-  - namespace: "aws:elasticbeanstalk:container:python:"
+  - namespace: "aws:elasticbeanstalk:container:python"
     option_name: WSGIPath
     value: runblueprint/wsgi.py
-  - namespace: "aws:elasticbeanstalk:container:python:staticfiles:"
-    option_name: /static/
+  - namespace: "aws:elasticbeanstalk:container:python:staticfiles"
+    option_name: "/static/"
     value: static/
+  - namespace: "aws:elasticbeanstalk:container:python:staticfiles"
+    option_name: /media/
+    value: media/
