Try to fix favicon setting

--- a/runblueprint/.ebextensions/02_python.config
+++ b/runblueprint/.ebextensions/02_python.config
@@ -13,6 +13,9 @@ option_settings:
     option_name: WSGIPath
     value: runblueprint/wsgi.py
   - namespace: "aws:elasticbeanstalk:container:python:staticfiles"
+    option_name: /favicon.ico
+    value: static/favicon.ico
+  - namespace: "aws:elasticbeanstalk:container:python:staticfiles"
     option_name: "/static/"
     value: static/
   - namespace: "aws:elasticbeanstalk:container:python:staticfiles"
