--- a/runblueprint/Makefile
+++ b/runblueprint/Makefile
@@ -1,3 +1,7 @@
 runserver:
-	. ../venv/bin/activate; \
+	. venv/bin/activate; \
 	./manage.py runserver --settings=runblueprint.local_settings;
+
+deploy:
+	. venv/bin/activate; \
+	eb deploy;
