Get unit tests working (!!)
Also added a make test target.

--- a/runblueprint/Makefile
+++ b/runblueprint/Makefile
@@ -1,3 +1,9 @@
+.PHONY: test
+
+test:
+	. venv/bin/activate; \
+	./manage.py test --settings=runblueprint.local_settings;
+
 runserver:
 	. venv/bin/activate; \
 	./manage.py runserver --settings=runblueprint.local_settings;
