--- a/runblueprint/.ebextensions/02_python.config
+++ b/runblueprint/.ebextensions/02_python.config
@@ -1,6 +1,6 @@
 container_commands:
   01_migrate:
-    command: "django-admin.py migrate"
+    command: "django-admin.py migrate --no-input"
     leader_only: true
   02_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
