--- a/runblueprint/requirements.txt
+++ b/runblueprint/requirements.txt
@@ -1,30 +1,10 @@
-awsebcli==3.7.7
-beautifulsoup4==4.5.1
-blessed==1.9.5
-botocore==1.4.34
-cement==2.8.2
-colorama==0.3.7
-Django==1.9.6
-django-webtest==1.8.0
-docker-py==1.7.2
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.12
-itsdangerous==0.24
-Jinja2==2.8
-jmespath==0.9.0
-MarkupSafe==0.23
-pathspec==0.3.4
-psycopg2==2.6.1
-python-dateutil==2.5.3
-PyYAML==3.11
-requests==2.9.1
-semantic-version==2.5.0
-six==1.10.0
-texttable==0.8.4
-waitress==1.0.0
-wcwidth==0.1.7
-WebOb==1.6.2
-websocket-client==0.37.0
-WebTest==2.0.23
-Werkzeug==0.11.9
+beautifulsoup4==4.6.0
+Django==1.11.7
+django-webtest==1.9.2
+mysqlclient==1.3.12
+python-dateutil==2.6.1
+pytz==2017.3
+six==1.11.0
+waitress==1.1.0
+WebOb==1.7.3
+WebTest==2.0.29
