--- a/ansible/django.yml
+++ b/ansible/django.yml
@@ -3,5 +3,10 @@
 - name: Deploy Django App
   hosts: all
   remote_user: runblueprint
+  vars_prompt:
+    - name: proceed
+      prompt: "Are you sure you want to deploy to Prod? (y|n)"
+      default: n
+      private: no
   roles:
     - django_app
