--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-ansible==2.4.3.0
+ansible==2.8.1
 asn1crypto==0.24.0
-bcrypt==3.1.4
-cffi==1.11.4
-cryptography==2.1.4
-Django==2.0.2
-idna==2.6
-Jinja2==2.10
-MarkupSafe==1.0
-mysqlclient==1.3.12
-paramiko==2.4.0
-pyasn1==0.4.2
-pycparser==2.18
-PyNaCl==1.2.1
-python-dateutil==2.6.1
-pytz==2017.3
-PyYAML==3.12
-six==1.11.0
+bcrypt==3.1.7
+cffi==1.12.3
+cryptography==2.7
+Django==2.2.3
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+mysqlclient==1.4.2.post1
+paramiko==2.6.0
+pycparser==2.19
+PyNaCl==1.3.0
+python-dateutil==2.8.0
+pytz==2019.1
+PyYAML==5.1.1
+six==1.12.0
+sqlparse==0.3.0
