--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 ansible==2.8.2
 asn1crypto==0.24.0
 bcrypt==3.1.7
+beautifulsoup4==4.9.0
 cffi==1.12.3
 cryptography==2.7
 Django==2.2.8
+django-webtest==1.9.7
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 mysqlclient==1.4.2.post1
@@ -14,4 +16,8 @@ python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==5.1.1
 six==1.12.0
+soupsieve==2.0
 sqlparse==0.3.0
+waitress==1.4.3
+WebOb==1.8.6
+WebTest==2.0.35
